This file documents the revision history for the Monitoring Webinterface Thruk.

1.60     not yet released
          - ...

1.58     Wed Nov 21 12:51:29 CET 2012
          - use regex matching in search preview too
          - added new config option first_day_of_week
          - added column filter in configuration page (Thibault Cohen)
          - faster and more useably mouseover in host/service lists
          - added configuration only backends
          - show link to hostdetails when no services match
          - added filter by number of services
          - added config option to select default quick command
          - added excel export for problems page
          - added json export for problems page
          - config tool:
            - preserve inline comments if possible
            - added enable/disable actions
            - show forward references on ref page too
            - fix computed config display of additive inheritance
            - fix ignoring changes to readonly pattern in config
            - fix auto submit when pressing some wizards
          - Bug Fixes
            - fixed sending commands to all backends
            - usability improvements for Internet Explorer
            - fixed renewing contactgroups cache after backend reload

1.56     Wed Nov  7 22:14:06 CET 2012
          - added naglint tool to beautify nagios config files
          - added sites panel when grouping backends by section
          - show perf bar for percentages too
          - reports:
            - replace links in html reports
            - fixed creating e-mail reports for availability pages
            - fixed sending first e-mail attachment always as report.pdf
          - config tool:
            - added object browser
            - show warning when saving objects without a name
            - recognize disabled (commented) objects
          - Bug Fixes
            - fixed limit to groups in alert summary

1.54     Mon Oct 22 15:08:26 CEST 2012